force-app/main/default/objects/CoverageSector__c/CoverageSector__c.object-meta.xml
<CustomObject>
    <description>Ability to Tag Multiple Sectors for the Standard Coverage Records.</description>
    <label>Coverage Sector</label>
    <nameField>
        <displayFormat>Company - {000}</displayFormat>
        <label>Company Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Sectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>