force-app/main/default/objects/CoverageSector__c/fields/CoverageTeam__c.field-meta.xml
<CustomField>
    <fullName>CoverageTeam__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Coverage Team</label>
    <referenceTo>Coverage_Team__c</referenceTo>
    <relationshipLabel>Coverage Sectors</relationshipLabel>
    <relationshipName>CoverageSectors</relationshipName>
    <type>Lookup</type>
</CustomField>