force-app/main/default/objects/CoverageSector__c/fields/CoverageType__c.field-meta.xml
<CustomField>
    <fullName>CoverageType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SectorValue__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>SectorValue__c.DependencyValue__c</field>
            <operation>equals</operation>
            <value>Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SectorValue__c</referenceTo>
    <relationshipLabel>Coverage Sectors</relationshipLabel>
    <relationshipName>CoverageSectorType</relationshipName>
    <type>Lookup</type>
</CustomField>