force-app/main/default/objects/CoverageSector__c/fields/PrimarySector__c.field-meta.xml
<CustomField>
    <fullName>PrimarySector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sector</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SectorValue__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>SectorValue__c.DependencyValue__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SectorValue__c</referenceTo>
    <relationshipLabel>Coverage Sectors (Primary Sector)</relationshipLabel>
    <relationshipName>PrimaryCoverageSectors</relationshipName>
    <type>Lookup</type>
</CustomField>