force-app/main/default/objects/CoverageSector__c/fields/TertiarySector__c.field-meta.xml
<CustomField>
    <fullName>TertiarySector__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tertiary Sector</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SectorValue__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>SectorValue__c.DependencyValue__c</field>
            <operation>equals</operation>
            <value>Tertiary</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SectorValue__c</referenceTo>
    <relationshipLabel>Coverage Sectors (Tertiary Sector)</relationshipLabel>
    <relationshipName>TertiaryCoverageSectors</relationshipName>
    <type>Lookup</type>
</CustomField>