force-app/main/default/objects/CoverageSector__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsMain__c</columns>
    <columns>CoverageType__c</columns>
    <columns>PrimarySector__c</columns>
    <columns>SecondarySector__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>